--- a/index.css
+++ b/index.css
@@ -27,7 +27,6 @@ header .nav-bar li {
   padding: 0;
   padding-bottom: 10px;
   margin: 0 10px 0px;
-
 }
 
 header .nav-bar li a {
@@ -48,19 +47,23 @@ header .nav-bar .circles svg {
 header .nav-bar li:hover .circles svg:nth-of-type(1) {
   animation: move 3s;
   animation-delay: 0.2s;
-  animation-timing-function: cubic-bezier(.24,0,0,.99);
+  animation-timing-function: cubic-bezier(.24, 0, 0, .99);
 }
 
 header .nav-bar li:hover .circles svg:nth-of-type(2) {
   animation: move 3s;
   animation-delay: 0.1s;
-  animation-timing-function: cubic-bezier(.24,0,0,.99);
+  animation-timing-function: cubic-bezier(.24, 0, 0, .99);
 }
 
 header .nav-bar li:hover .circles svg:nth-of-type(3) {
   animation: move 3s;
   animation-delay: 0s;
-  animation-timing-function: cubic-bezier(.24,0,0,.99);
+  animation-timing-function: cubic-bezier(.24, 0, 0, .99);
+}
+
+header .phone-nav-bar {
+  display: none;
 }
 
 @keyframes move {
@@ -77,5 +80,122 @@ header .nav-bar li:hover .circles svg:nth-of-type(3) {
   100% {
     transform: translate(150px, 0px);
     opacity: 0;
+  }
+}
+
+.view {
+  position: relative;
+  display: block;
+  background-color: #000;
+  width: 100%;
+  height: calc(100vh - 85px);
+  overflow: hidden;
+}
+
+.view .container {
+  margin-top: 60vh;
+  color: white;
+}
+
+.view .container h1 {
+  margin-bottom: 30px;
+}
+
+canvas {
+  margin: auto;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.quote {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-left: 5px solid gray;
+}
+
+.quote .quote-text {
+  font-size: 1.5rem;
+}
+
+.quote .quote-author:before {
+  content: '— ';
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.quote .quote-author {
+  font-size: 0.95rem;
+  font-style: italic;
+}
+
+.quote .inner {}
+
+footer {
+  text-align: center;
+  height: 250px;
+  background-color: #980001;
+  color: white;
+  font-family: 'Work Sans', sans-serif;
+  padding-top: 30px;
+}
+
+footer h1 {
+  font-size: 1.6rem;
+}
+
+footer p {
+  margin-top: 150px;
+  color: #ddd;
+  font-size: 0.7rem;
+}
+
+footer a,
+footer a:hover {
+  color: #ddd;
+}
+
+@media (max-width: 768px) {
+  header {
+    color: #ffcb03;
+    overflow: visible;
+    height: auto;
+    text-align: center;
+  }
+  header h1 {
+    float: none;
+    margin: 0;
+    padding-top: 20px;
+  }
+  header .nav-bar {
+    display: none;
+  }
+  header .phone-nav-bar {
+    background-color: #000;
+    display: block;
+    float: none;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 0px;
+  }
+  header .phone-nav-bar a {
+    font-size: 0.9rem;
+  }
+  header .phone-nav-bar a:after {
+    content: ' ';
+    border-bottom: 1px solid white;
+    display: block;
+  }
+  .view {
+    height: calc(100vh - 100px)
+  }
+  .view .container {
+    margin-top: 40vh;
   }
 }
